# mcp-financial-analyst-deepseek-

./: .gitignore  README.md  finance_crew.py  pyproject.toml  server.py
